Added FurWaz account login / linking
